--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,41 @@
 body {
-    background-image: url('../img/login.jpg'); 
-    background-size: cover;
-    background-repeat: no-repeat; 
-    background-attachment: fixed;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: #2b0000;
+    background: #3498db;
+    font-family: sans-serif;
 }
 
-.header {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-h1, h2 {
-    margin: 10px 0;
-}
-
-.container {
-    max-width: 400px;
-    width: 100%;
-    background: rgba(255, 255, 255, 0.9);
-    padding: 20px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-}
-
-.container:hover {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-}
-
-form input {
-    width: 95%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ffffff;
-}
-
-form input:focus {
-    border-color: #007BFF;
-    outline: none;
-}
-
-form button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007BFF;
+h2 {
     color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
 }
 
-form button:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
+.login {
+    padding: 1em;
+    margin: 2em auto;
+    width: 17em;
+    background: #fff;
+    border-radius: 3px;
 }
 
-a {
-    display: block;
-    text-align: center;
-    color: #007BFF;
-    text-decoration: none;
-    margin-top: 10px;
+label {
+    font-size: 10pt;
+    color: #555;
 }
 
-a:hover {
-    color: #0056b3;
+input[type="text"],
+input[type="password"],
+input[type="phone"],
+textarea {
+    padding: 8px;
+    width: 95%;
+    background: #efefef;
+    border: 0;
+    font-size: 10pt;
+    margin: 6px 0px;
+}
+
+.tombol {
+    background: #3498db;
+    color: #fff;
+    border: 0;
+    padding: 5px 8px;
+    margin: 20px 0px;
 }
